# VirtualFileSystem

./: .gitignore  Readme.txt
FileStructureUsedToTest/TestDirectory/Some/Directory/: sheet.xlsx
FileStructureUsedToTest/TestDirectory/Some/Output/: output.txt
VirtualFileSystem/: CMakeLists.txt  File.h  FileSystem.cpp  FileSystem.h  LinuxFile.cpp  LinuxFile.h  Makefile  ReadMe.txt  VirtualFileSystem.cpp  VirtualFileSystem.make  VirtualFileSystem.sln  VirtualFileSystem.vcxproj  VirtualFileSystem.vcxproj.filters  WindowsFile.cpp  WindowsFile.h  example1.make  stdafx.cpp  stdafx.h
VirtualFileSystem/VirtualFileSystem/: CMakeLists.txt
VirtualFileSystem/scripts/: genie.lua
